# Beaver

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  build.rs  install.sh  main.py  main.tf  pom.xml  requirements.txt  tmp.json  vector.yaml
.claude/rules/: sync-sigma-beam.md
.github/workflows/: docs.yml  release.yml
BeaverConfig/: BeaverConfig.yaml  logging_config.yaml
Infra/: main.tf  variables.tf
beaver_config/: beaver_config.yaml  logging_config.yaml  vector.yaml
cli/: Cargo.toml
cli/d/: beaver_config.yaml
cli/d/artifacts/: vector.yaml
cli/src/: commands.rs  config.rs  config_parsing.rs  main.rs
cli/src/commands/: commands.rs  deploy.rs  init.rs  tmp.rs
cli/src/lib/: bq.rs  crj.rs  cron.rs  gcs.rs  mod.rs  pubsub.rs  resources.rs
d/artifacts/: vector.yaml
dataflow/: detections.py  detections_template.py  notifications.py  requirements.txt
dataflow/misc/: sample_detections_gen.py
dataflow/tests/: conftest.py  test_pipeline.py
docs/: alerts-schema.md  book.toml  config-schema.md  efficient-storage.md  gcp-validation-results.md  operator-runbook.md  sigma-beam-integration-handoff.md
docs/book/: 404.html  architecture.html  configuration.html  dashboard.html  introduction.html  print.html  quickstart.html  searcher-c2a407aa.js  searchindex-6e2e3a4b.js  sigma-rules.html  toc-a58b4188.js  toc.html  troubleshooting.html
docs/book/commands/: deploy.html  destroy.html  index.html  init.html  refresh-detections.html  repair-dataflow.html
docs/src/: SUMMARY.md  architecture.md  configuration.md  dashboard.md  introduction.md  quickstart.md  sigma-rules.md  troubleshooting.md
docs/src/commands/: deploy.md  destroy.md  index.md  init.md  refresh-detections.md  repair-dataflow.md
docs/superpowers/plans/: 2026-05-14-efficient-storage-hybrid.md  2026-06-04-fix-review-bugs.md  2026-06-05-fix-test-failures.md  2026-06-05-gcp-validation.md  2026-06-05-sigma-beam-integration.md  2026-06-05-sigma-beam-review-fixes.md  2026-06-09-drain-based-reload.md  2026-06-12-dashboard-rearchitect.md
docs/superpowers/specs/: 2026-06-18-grafana-dashboard-design.md
docs/verification/: 2026-06-09-drain-reload-gcp-validation.md
examples/smoke/beaver_config/: beaver_config.yaml
examples/smoke/beaver_config/artifacts/: Dockerfile  detections_gen.py  resources.yaml  vector.yaml
examples/smoke/beaver_config/detections/: detections_template.py
examples/test-pipeline/: README.md  verify.py
examples/test-pipeline/beaver_config/: beaver_config.yaml
examples/test-pipeline/beaver_config/artifacts/: detections_gen.py  resources.yaml  vector.yaml
examples/test-pipeline/beaver_config/detections/: detections_template.py  venv
examples/test-pipeline/payloads/: expected.yaml
examples/test-pipeline/scripts/: input_topic.sh  publish_payloads.sh  teardown_input.sh
infra/: Cargo.toml  cron.rs  main.tf  tmp.yaml  tmp2.yaml  variables.tf
infra/src/: bq.py  bq.rs  config.rs  crj.rs  cron.rs  gcs.rs  main.rs  pubsub.rs  service_accounts.rs
lib/java/: pom.xml
lib/java/pipe-1/: build.sbt  pom.xml
lib/python/: Makefile  NotAMakefile  main.py  sigma_generate.py
scripts/: e2e_aggregate_verify.py  e2e_test_pipeline.sh  input_topic.sh  publish.sh  publish_test_payloads.sh  teardown_input.sh  test_dataflow.sh
src/: commands.rs  main.rs
src/beaver_config/: beaver_config.yaml
src/beaver_config/artifacts/: resources.yaml  vector.yaml
src/beaver_config/detections/: generate.sh  install.sh  tmp
src/commands/: compile.rs  dashboard.rs  deploy.rs  destroy.rs  init.rs  repair.rs
src/lib/: bq.rs  cloud_build.rs  cold_storage.rs  config.rs  crj.rs  cron.rs  crs.rs  dashboard.rs  dataflow.rs  detections_gen.rs  gcs.rs  generate.sh  install.sh  main.rs  mod.rs  notifications.rs  precheck.rs  pubsub.rs  resources.rs  scratch.json  service_accounts.rs  sigma.rs  sigma_beam_io.rs  test_helpers.rs  tmp  utilities.rs  vm.rs
src/lib/dashboard/: health.rs  layout.rs  mod.rs  panels.rs  render.rs  widgets.rs
src/lib/grafana/: config.rs  dashboard.rs  deploy.rs  mod.rs  preview.rs  provisioning.rs
src/lib/schemas/: lifecycle.json
word-count-beam/: README.md  pom.xml  sample.txt
(+51 files in other folders)
