[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap_complete = "4.4.3"
clap_mangen = "0.2.14"
either = "1.9.0"
exitcode = "1.1.2"
inquire = "0.6.2"
spinoff = "0.8.0"


[dependencies.clap]
version = "4.4.6"
features = ["suggestions", "color", "derive", "wrap_help", "cargo"]
