[package]
name = "infra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = { version = "0.9.29" }
tempfile = { version = "3.9.0", features = [] }
